Closed
Bug 1145448
Opened 10 years ago
Closed 10 years ago
When fullscreen window lose focus, a fake title bar is painted
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla40
People
(Reporter: xidorn, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(2 files)
38.02 KB,
image/png
|
Details | |
1.14 KB,
patch
|
jimm
:
review+
lizzard
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Make something in fullscreen (DOM fullscreen, not fullscreen mode)
2. Switch to some other window
3. Go back to the fullscreen window
There will be a strange title bar at the top of the fullscreen. However, this title bar is actually transparent to any pointer event. I guess it is just something mispainted.
This doesn't happen on the current release, but reproducible on aurora and nightly.
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8590064 -
Flags: review?(jmathies)
Assignee | ||
Comment 2•10 years ago
|
||
Although I cannot reproduce bug 1064787, this patch probably could also fix that bug.
![]() |
||
Comment 4•10 years ago
|
||
Comment on attachment 8590064 [details] [diff] [review]
patch
confirmed locally this fixes the problem.
Attachment #8590064 -
Flags: review?(jmathies) → review+
![]() |
||
Comment 5•10 years ago
|
||
Lets nominate this for aurora and beta uplift once it lands and sticks.
![]() |
||
Updated•10 years ago
|
Assignee: nobody → quanxunzhen
Assignee | ||
Comment 6•10 years ago
|
||
Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8590064 [details] [diff] [review]
patch
Approval Request Comment
[Feature/regressing bug #]: unknown, but seems to be a significant regression since current beta
[User impact if declined]: will see unwanted fake title bar on the top, which is hard to remove if the page doesn't change anything on that area
[Describe test coverage new/current, TreeHerder]: no test for this particular problem
[Risks and why]: doesn't seem to have risk since it just stop system from painting its ui on fullscreen mode
[String/UUID change made/needed]: n/a
Attachment #8590064 -
Flags: approval-mozilla-beta?
Attachment #8590064 -
Flags: approval-mozilla-aurora?
![]() |
||
Comment 8•10 years ago
|
||
Thanks!
Comment 9•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Updated•10 years ago
|
status-firefox39:
--- → affected
Keywords: regression
Comment 10•10 years ago
|
||
Comment on attachment 8590064 [details] [diff] [review]
patch
Approving for uplift to aurora. Looks like a recent regression; treeherder looks ok with this change.
Attachment #8590064 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•10 years ago
|
||
Updated•10 years ago
|
status-firefox38:
--- → affected
Comment 12•10 years ago
|
||
Comment on attachment 8590064 [details] [diff] [review]
patch
We probably want that in beta too.
Should be in 38 beta 5.
Attachment #8590064 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•10 years ago
|
||
Updated•10 years ago
|
Flags: qe-verify+
Comment 14•10 years ago
|
||
Reproduced the original issue on Windows 7 x64, using Firefox 38 Beta 4 and Firefox 39 from April 8th.
The issue no longer reproduces on:
- Firefox 38 Beta 5 - BuildID=20150416143048
- latest Firefox 39 Aurora - BuildID=20150416004008
- latest Firefox 40 Nightly - BuildID=20150416143048
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•