Bug 1145448 - Avoid painting native frame on fullscreen window when activate/inactivate. r=jimm, a=sledru